--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <p>Name:</p>
             <input id="name" class="form-field__full" type="name" name="name">
             <p>Height</p>
-            <label>Feet: <input id="feet" class="form-field__short" type="number" name="meters"></label>
-            <label>inches: <input id="inches" class="form-field__short" type="number" name="cm"></label>
+            <label>feet: <input id="feet" class="form-field__short" type="number" name="feet"></label>
+            <label>inches: <input id="inches" class="form-field__short" type="number" name="inches"></label>
             <p>Weight:</p>
             <label><input id="weight" class="form-field__full" type="number" name="weight">kgs</label>
             <p>Diet:</p>
