--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,36 +14,58 @@
     <!-- Link to app.js with defer till HTML render -->
     <script defer src="app.js"></script>
 </head>
+
 <body>
     <header>
-        <h2>Natural History Museum</h2> 
+        <h2>Natural History Museum</h2>
         <h1>Dinosaurs</h1>
         <h3>How do you compare?</h3>
     </header>
     <!-- Form to get user input -->
     <form id="dino-compare">
         <div class="form-container">
-            <p>Name:</p>
+            <label for="name">Name:</label>
             <input id="name" class="form-field__full" type="name" name="name">
-            <p>Height</p>
-            <label>feet: <input id="feet" class="form-field__short" type="number" name="feet"></label>
-            <label>inches: <input id="inches" class="form-field__short" type="number" name="inches"></label>
-            <p>Weight:</p>
-            <label><input id="weight" class="form-field__full" type="number" name="weight">kgs</label>
-            <p>Diet:</p>
+            <!-- Select metric or imperial units -->
+            <fieldset>
+                <legend>
+                    <p>Units</p>
+                </legend>
+                <label for="metric">Metric:</label>
+                <input type="radio" id="metric" name="units" value="metric" checked >
+            </fieldset>
+            <!-- Metric form elements -->
+            <div id="metric-form" class="metric-form">
+                <label for="height-metric">
+                    <p>Height (cm)</p>
+                </label>
+                <input id="height-metric" class="form-field__short" type="number">
+                <label for="weight-metric">
+                    <p>Weight (kg)</p>
+                </label>
+                <input id="weight-metric" class="form-field__full" type="number">
+            </div>
+            <label for="diet">
+                <p>Diet:</p>
+            </label>
             <select id="diet" class="form-field__full" name="diet">
-                <option>Herbavor</option>
-                <option>Omnivor</option>
-                <option>Carnivor</option>
+                <option>herbivore</option>
+                <option>omnivore</option>
+                <option>carnivore</option>
             </select>
-            <div id="btn">Compare Me!</div>
+            <input id="btn" type="submit" value="Compare Me!">
         </div>
+        <!-- Holds an error message for form validation -->
+        <div id="error" class="error"></div>
     </form>
     <!-- .grid to attach tiles to -->
     <main id="grid"></main>
     <footer>
         <!-- Include information source -->
-        <p class="fine-print">Data Sourced from <a href="https://www.wikipedia.org/">Wikipedia.org</a>, all numbers are approximations.</p>
+        <p class="fine-print">Data sourced from <a href="https://www.wikipedia.org/">Wikipedia.org</a>. All numbers
+            are
+            approximations.</p>
     </footer>
 </body>
+
 </html>
