--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="form-container">
             <label for="name">Name:</label>
             <input id="name" class="form-field__full" type="name" name="name">
-            <!-- Select metric or imperial units -->
+            <!-- Select metric units -->
             <fieldset>
                 <legend>
                     <p>Units</p>
